--- a/vote.yaml
+++ b/vote.yaml
@@ -3,7 +3,7 @@ kind: Deployment
 metadata:
   name: vote-deployment
 spec:
-  replicas: 1
+  replicas: 5
   template:
     metadata:
       labels:
@@ -28,3 +28,16 @@ spec:
         - containerPort: 80
       imagePullSecrets:
       - name: acr-secret
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: vote-service
+  labels:
+    app: voting-app
+spec:
+  type: LoadBalancer
+  ports:
+  - port: 80
+  selector:
+    name: vote
