--- a/worker.yaml
+++ b/worker.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: worker
-        image: japoonregistry-microsoft.azurecr.io/voting-app/worker:latest
+        image: jpoon/worker:latest
         env:
         - name: AZURE_STORAGE_ACCOUNT
           valueFrom:
@@ -24,5 +24,3 @@ spec:
             secretKeyRef:
               name: azure-storage
               key: access-key
-      imagePullSecrets:
-      - name: acr-secret
